; ModuleID = '/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_iommu.c_iommu_dvmamem_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/sparc64/sparc64/extr_iommu.c_iommu_dvmamem_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, %struct.iommu_state* }
%struct.iommu_state = type { i32 }
%struct.TYPE_12__ = type { i32 }

@BUS_DMA_NOWAIT = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@BUS_DMA_ZERO = common dso_local global i32 0, align 4
@M_ZERO = common dso_local global i32 0, align 4
@M_IOMMU = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@BUS_DMA_COHERENT = common dso_local global i32 0, align 4
@DMF_COHERENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_13__*, i8**, i32, %struct.TYPE_12__**)* @iommu_dvmamem_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iommu_dvmamem_alloc(%struct.TYPE_13__* %0, i8** %1, i32 %2, %struct.TYPE_12__** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_12__**, align 8
  %10 = alloca %struct.iommu_state*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_12__** %3, %struct.TYPE_12__*** %9, align 8
  %13 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %13, i32 0, i32 1
  %15 = load %struct.iommu_state*, %struct.iommu_state** %14, align 8
  store %struct.iommu_state* %15, %struct.iommu_state** %10, align 8
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %17 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %9, align 8
  %18 = call i32 @sparc64_dma_alloc_map(%struct.TYPE_13__* %16, %struct.TYPE_12__** %17)
  store i32 %18, i32* %11, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* %11, align 4
  store i32 %21, i32* %5, align 4
  br label %86

22:                                               ; preds = %4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @BUS_DMA_NOWAIT, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* @M_NOWAIT, align 4
  store i32 %28, i32* %12, align 4
  br label %31

29:                                               ; preds = %22
  %30 = load i32, i32* @M_WAITOK, align 4
  store i32 %30, i32* %12, align 4
  br label %31

31:                                               ; preds = %29, %27
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @BUS_DMA_ZERO, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %31
  %37 = load i32, i32* @M_ZERO, align 4
  %38 = load i32, i32* %12, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %12, align 4
  br label %40

40:                                               ; preds = %36, %31
  %41 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @M_IOMMU, align 4
  %45 = load i32, i32* %12, align 4
  %46 = call i8* @malloc(i32 %43, i32 %44, i32 %45)
  %47 = load i8**, i8*** %7, align 8
  store i8* %46, i8** %47, align 8
  %48 = icmp eq i8* %46, null
  br i1 %48, label %49, label %56

49:                                               ; preds = %40
  %50 = load i32, i32* @ENOMEM, align 4
  store i32 %50, i32* %11, align 4
  %51 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %52 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %9, align 8
  %53 = load %struct.TYPE_12__*, %struct.TYPE_12__** %52, align 8
  %54 = call i32 @sparc64_dma_free_map(%struct.TYPE_13__* %51, %struct.TYPE_12__* %53)
  %55 = load i32, i32* %11, align 4
  store i32 %55, i32* %5, align 4
  br label %86

56:                                               ; preds = %40
  %57 = load i32, i32* %8, align 4
  %58 = load i32, i32* @BUS_DMA_COHERENT, align 4
  %59 = and i32 %57, %58
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %68

61:                                               ; preds = %56
  %62 = load i32, i32* @DMF_COHERENT, align 4
  %63 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %9, align 8
  %64 = load %struct.TYPE_12__*, %struct.TYPE_12__** %63, align 8
  %65 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = or i32 %66, %62
  store i32 %67, i32* %65, align 4
  br label %68

68:                                               ; preds = %61, %56
  %69 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %70 = load %struct.iommu_state*, %struct.iommu_state** %10, align 8
  %71 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %9, align 8
  %72 = load %struct.TYPE_12__*, %struct.TYPE_12__** %71, align 8
  %73 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %74 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = call i32 @IOMMU_SIZE_ROUNDUP(i32 %75)
  %77 = call i32 @iommu_dvma_valloc(%struct.TYPE_13__* %69, %struct.iommu_state* %70, %struct.TYPE_12__* %72, i32 %76)
  %78 = load %struct.iommu_state*, %struct.iommu_state** %10, align 8
  %79 = call i32 @IS_LOCK(%struct.iommu_state* %78)
  %80 = load %struct.iommu_state*, %struct.iommu_state** %10, align 8
  %81 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %9, align 8
  %82 = load %struct.TYPE_12__*, %struct.TYPE_12__** %81, align 8
  %83 = call i32 @iommu_map_insq(%struct.iommu_state* %80, %struct.TYPE_12__* %82)
  %84 = load %struct.iommu_state*, %struct.iommu_state** %10, align 8
  %85 = call i32 @IS_UNLOCK(%struct.iommu_state* %84)
  store i32 0, i32* %5, align 4
  br label %86

86:                                               ; preds = %68, %49, %20
  %87 = load i32, i32* %5, align 4
  ret i32 %87
}

declare dso_local i32 @sparc64_dma_alloc_map(%struct.TYPE_13__*, %struct.TYPE_12__**) #1

declare dso_local i8* @malloc(i32, i32, i32) #1

declare dso_local i32 @sparc64_dma_free_map(%struct.TYPE_13__*, %struct.TYPE_12__*) #1

declare dso_local i32 @iommu_dvma_valloc(%struct.TYPE_13__*, %struct.iommu_state*, %struct.TYPE_12__*, i32) #1

declare dso_local i32 @IOMMU_SIZE_ROUNDUP(i32) #1

declare dso_local i32 @IS_LOCK(%struct.iommu_state*) #1

declare dso_local i32 @iommu_map_insq(%struct.iommu_state*, %struct.TYPE_12__*) #1

declare dso_local i32 @IS_UNLOCK(%struct.iommu_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
